--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/platform-fastify": "^6.5.3",
     "@nestjs/typeorm": "^6.1.3",
     "class-transformer": "^0.2.3",
     "passport": "^0.4.0",
