--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-fastify": "^6.5.3",
     "@nestjs/typeorm": "^6.1.3",
     "class-transformer": "^0.2.3",
+    "class-validator": "^0.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
