--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./src/tests/jest.e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^6.0.0",
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/platform-fastify": "^6.5.3",
     "@nestjs/typeorm": "^6.1.3",
+    "chai": "^4.2.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "passport": "^0.4.0",
@@ -66,6 +67,8 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "verbose": true
   }
 }
